Fix alignment of image gallery on species page. (see #626)

--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /*! *** Go Botany master styles file ***
  Please edit only the .scss source and use Compass to auto-generate the .css.
  The generated .css is kept in the repository to allow easy deployment.
@@ -577,7 +576,7 @@ body#species #main { background: url(/static/images/layout/sidebar-bg.png) repea
 body#species #main .common { margin: 6px 0 15px; }
 
 body#species #main { /* layout: right-side content sections */ }
-body#species #main #breadcrumb, body#species #main #name, body#species #main #species-images, body#species #main #images-note, body#species #main #partner, body#species #main #facts, body#species #main #habitat, body#species #main #chars, body#species #main #wetland, body#species #main #status, body#species #main #info-dkey { clear: left; margin-left: 250px; }
+body#species #main #breadcrumb, body#species #main #name, body#species #main .img-gallery, body#species #main #images-note, body#species #main #partner, body#species #main #facts, body#species #main #habitat, body#species #main #chars, body#species #main #wetland, body#species #main #status, body#species #main #info-dkey { clear: left; margin-left: 250px; }
 
 /* left-side content sections */
 body#species .section { padding: 16px 16px 0; width: 197px; }
